Fix content top margin of webdesign page on mobile

--- a/custompage/view/css/codestitch-techsero.css
+++ b/custompage/view/css/codestitch-techsero.css
@@ -849,7 +849,7 @@ html {
     #services-1645 .cs-container {
       width: 100%;
       max-width: 80rem;
-      margin: auto;
+      margin: 80px auto 0;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -981,6 +981,12 @@ html {
       grid-column: span 6;
     }
   }
+  /* ?? - px */
+  @media only screen and (min-width: 64rem) {
+    #services-1645 .cs-container {
+      margin: auto;
+    }
+  }   
   /* Large Desktop - 1024px */
   @media only screen and (min-width: 80rem) {
     #services-1645 .cs-container {
@@ -1930,7 +1936,7 @@ html {
     #services-1645 .cs-container {
       width: 100%;
       max-width: 80rem;
-      margin: auto;
+      margin: 80px auto 0;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -2062,6 +2068,12 @@ html {
       grid-column: span 6;
     }
   }
+  /* ?? - px */
+  @media only screen and (min-width: 64rem) {
+    #services-1645 .cs-container {
+      margin: auto;
+    }
+  }   
   /* Large Desktop - 1024px */
   @media only screen and (min-width: 80rem) {
     #services-1645 .cs-container {
